# mcp_finance

./: .gitignore  README.md  claude_desktop_config.json
etoro-server/: README.md  pyproject.toml  server.py  test_auth.py
mcp-server/: pyproject.toml  risk_rules.md  server.py
project-knowledge/: defi_skill.md  equity_skill.md  forex_skill.md  guard_rules.md  market_intelligence_skill.md  plan_template.md  platforms_skill.md  risk_rules.md  social_skill.md  system.md  tax_colombia.md  technical_skill.md  tracking_skill.md
